# MKW-Cosmos

./: .gitignore  Build.bat  GameP.SMAP  Kamek-Project.code-workspace  KamekM.BMAP  KamekM.SMAP  Link.bat  Makefile  README.md  TXT.txt  build.py
ExtraFiles/: UIDX.szs  buildUI.py  ui_helper.py
KamekSource/: AddressMapper.cs  Linker.cs  Program.cs
KamekSource/Hooks/: Hook.cs
TestPack/riivolution/: testpack.xml
code/: lecodePatches.txt  main.cpp  main.hpp
code/AprilFools/: Congregation.cpp
code/Aurora/: AuroraSlot.cpp  AuroraSlot.hpp  AuroraUI.cpp  UIAnimation.cpp  UIAnimation.hpp
code/Controller/: MiscController.cpp  MiscController.hpp
code/Debug/: Debug.cpp  Debug.hpp  ExceptionHandler.cpp  Heap.cpp  Heap.hpp  IOSDolphin.cpp  IOSDolphin.hpp  SymbolMap.cpp  SymbolMap.hpp
code/FileManager/: FileManager.cpp  FileManager.hpp  FolderManager.cpp  FolderManager.hpp  Riivolution.hpp
code/Ghost/: GhostManager.cpp  GhostManager.hpp  GhostReplay.cpp  GhostUpload.cpp  GhostUpload.hpp
code/LeCode/: LeCodeFixes.cpp  LeCodeManager.cpp  LeCodeManager.hpp  LeCodePatcher.cpp  LeCodePatcher.hpp
code/Network/: SHA256.hpp  (+7 more)
engine/: hooks.hpp  kamek.cpp  kamek.hpp  types.hpp
extra/CupCreator/: BetterBinaryReader.cs  BetterBinaryWriter.cs  CMakeLists.txt  CupCreator.csproj  CupCreator.sln  ImGuiController.cs  Program.cs  vcpkg.json
extra/CupCreator/Properties/: Resources.Designer.cs
extra/CupCreator/src/: ImGuiBase.cpp  ImGuiBase.h  main.cpp
extra/CupCreator/src/editor/: EditorBase.cpp  EditorBase.h  ImageLoader.cpp  ImageLoader.h  yaz.cpp  yaz.h
extra/CupCreator/src/low/: brlyt.h  lmath.h  lyt_types.h
extra/CupCreator/src/lyt/: Pane.cpp  Pane.h
extra/CupCreator/src/math/: constants.h  gMath.h
extra/CupCreator/src/system/: File.cpp  File.h  FileDialogManager.cpp  FileDialogManager.h
include/: symbols.txt  versions.txt
loader/: Loader.cscd  Loader.csld  build.bat  console.cpp  console.hpp  functions.cpp  functions.hpp  kamekLoader.cpp  kamekLoader.hpp  mkw.cpp
source/: symbols.txt  versions.txt
(+1429 files in other folders)
